[package]
name = "jito-sdk"
version = "0.1.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "jito sdk"
keywords = ["trade", "crypto", "finance", "solana", "jito"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/jito-sdk"

[dependencies]
solana-network-sdk = "0.2.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
solana-sdk = "3.0.0"
bs58 = "0.5"
base64 = "0.21"
bincode = "2.0.1"
